@@ -1,5 +1,7 @@
 0.03
  - Add example to doc for test of fork and socket functionality.
+ - Add example to doc for example test which use fork and socket
+   functionality.
 
 0.02 2022-08-26T11:52:58+02:00
  - Add Check::Fork::HardcodedUsage doc.
